# podish

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Fiberish.sln  LICENSE.md  Podish.slnx  README.md  THIRD_PARTY_NOTICES.md  full_test.sh  msbuild.binlog  pytest.ini  test.sh  test_all.sh  x86emu.sln
FiberPod/: ContainerObservability.cs  FiberPod.csproj  ImageArchiveService.cs  OciImageStoreModels.cs  OciLayerIndexBuilder.cs  OciPullService.cs  Program.cs
Fiberish.App/: CMakeLists.txt  Fiberish.App.csproj  Program.cs
Fiberish.App/Core/: Engine.cs  Task.cs
Fiberish.App/Core/Diagnostics/: Logging.cs
Fiberish.App/Loader/: ElfLoader.cs
Fiberish.App/Memory/: VMAManager.cs
Fiberish.App/Native/: X86Native.cs  X86SyscallNumbers.cs
Fiberish.App/Syscalls/: LinuxStructs.cs  ProcFsManager.cs  SyscallAsync.cs  SyscallAsyncWrappers.cs  SyscallHandlers.Select.cs  SyscallHandlers.cs  SyscallHelpers.cs  SyscallManager.cs
Fiberish.App/VFS/: FileSystemRegistry.cs  Hostfs.cs  Pipe.cs  Structs.cs
Fiberish.Cli/: Fiberish.Cli.csproj  Program.cs
Fiberish.Core/: AssemblyInfo.cs  Fiberish.Core.csproj  GlobalUsings.cs
Fiberish.FsName.Generator/: Fiberish.FsName.Generator.csproj  FsNameLiteralGenerator.cs
Fiberish.Netstack/: Cargo.toml
Fiberish.SilkFS/: Fiberish.SilkFS.csproj  SilkFsOptions.cs  SilkMetadataStore.cs  SilkRepository.cs  SilkSqliteDriver.cs
Fiberish.SilkFS.Tests/: Fiberish.SilkFS.Tests.csproj  SilkFsOptionsTests.cs  SilkRepositoryTests.cs  SilkSqliteDriverTests.cs
Fiberish.Tests/: CredentialTests.cs  Fiberish.Tests.csproj  GlobalUsings.cs  StatxTests.cs  TestRuntimeFactory.cs  TestWorkspace.cs  VFSAttributeTests.cs  VFSRefCountTests.cs  VFSTests.cs
Fiberish.X86/: AssemblyInfo.cs  Fiberish.X86.csproj
Podish/: Package.resolved  Package.swift  README.md
Podish.Browser/: .gitignore  BrowserEventDispatcher.cs  BrowserExports.cs  BrowserHttpRpc.cs  BrowserLayerRootfs.cs  BrowserSabInterop.cs  Podish.Browser.csproj  Program.cs  README.md  build-rootfs.sh
Podish.Cli/: ImageArchiveService.cs  Podish.Cli.csproj  PodishCliJsonContext.cs  PodishPulseVirtualDaemon.cs  PodishTestVirtualEchoDaemon.cs  PodishWaylandVirtualDaemon.cs  Program.cs
Podish.Core/: AppleResolverNative.cs  AssemblyInfo.cs  ContainerLaunchSpecResolver.cs  ContainerMemoryLimits.cs  ContainerMetadataStore.cs  ContainerObservability.cs  ContainerRuntimeService.cs  ContainerRuntimeThread.cs  ContainerUserResolver.cs  CooperativeFileLock.cs  GuestStatsModels.cs  ImageArchiveService.cs  MemoryPageRefLogEntry.cs  OciImageStoreModels.cs  OciLayerIndexBuilder.cs  OciLayerIndexMerger.cs  OciPullService.cs  OciStorePath.cs  Podish.Core.csproj  PodishContext.cs  PodishJsonContext.cs  RootfsArchiveLoader.cs
Podish.Core.Native/: InternalsVisibleTo.cs  Podish.Core.Native.csproj  PodishJsonContext.cs  PodishNativeApi.cs  PodishNativeModels.cs  podish.h
Podish.Display/: DisplayAbstractions.cs
Podish.PerfTools/: BenchmarkRunner.cs  PerfWorkloadCases.cs  Podish.PerfTools.csproj  Program.Analysis.Models.cs  Program.Analysis.cs  Program.Candidates.cs  Program.Common.cs  Program.Profile.cs  Program.Semantics.cs  Program.SibStats.cs  Program.Superopcodes.cs  Program.cs  README.md
Podish.PjdFs/: Podish.PjdFs.csproj  Program.cs
Podish.Pulse/: GlobalUsings.cs  Podish.Pulse.csproj
Podish.Pulse.Tests/: Podish.Pulse.Tests.csproj  ProtocolTests.cs  PulseServerTests.cs
Podish.Wayland/: GlobalUsings.cs  Podish.Wayland.csproj  WaylandCore.cs  WaylandFocusManager.cs  WaylandKeyboardKeymap.cs  WaylandKeyboardLayout.cs  WaylandPresentation.cs  WaylandServerObjects.cs  WaylandUiTheme.cs
Podish.Wayland.Generator/: Podish.Wayland.Generator.csproj  Program.cs
Podish.Wayland.Tests/: Podish.Wayland.Tests.csproj  WaylandTests.cs
PodishApp/: Package.swift  README.md
benchmark/: build_coremark.sh
docs/: copy-and-patch-jit-design.md  developer_notes.md  flags-cache-model.md  hostpage-linux-style-design.md  hostpage-slot-ownership-design.md  memory-management.md  mmu-lifecycle-model.md  (+4 more)
libfibercpu/: .clang-format  CMakeLists.txt  bindings.cpp  bindings.h  common.h  decoder.cpp  decoder.h  decoder_lut.h  dfe_lut.h  dispatch.h  exec_utils.h  float80.c  float80.cpp  float80.h  hooks.h  jit_ops.h  jit_stub.cpp  logger.cpp  logger.h  main.cpp  ops.cpp  ops.h  ops_helpers_template.h  specialization.h  state.h  superopcodes.cpp  superopcodes.h
libfibercpu/jit/: block_builder.cpp  block_builder.h  peephole.cpp  peephole.h  stencil.h
libfibercpu/mem/: mmu.h  mmu_impl.h  tlb.h  types.h
libfibercpu/ops/: ops_alu.cpp  ops_alu.h  ops_alu_impl.h  ops_compare.cpp  ops_compare.h  ops_compare_impl.h  ops_control.cpp  ops_control.h  ops_control_impl.h  ops_data_mov.cpp  ops_data_mov.h  ops_data_mov_impl.h  ops_double_shift.cpp  ops_double_shift.h  ops_double_shift_impl.h  ops_fpu.cpp  ops_fpu.h  ops_fpu_impl.h  ops_groups.cpp  ops_groups.h  ops_groups_impl.h  ops_helpers.cpp  ops_helpers.h  ops_mmx.cpp  ops_mmx_impl.h  ops_muldiv.cpp  ops_muldiv.h  ops_muldiv_impl.h  ops_registration_utils.h  ops_shift_bit.cpp  ops_shift_bit.h  ops_shift_bit_impl.h  ops_sse_cvt.cpp  ops_sse_cvt.h  ops_sse_cvt_impl.h  ops_sse_fp.cpp  ops_sse_fp.h  ops_sse_fp_impl.h  ops_sse_int.cpp  ops_sse_int.h  (+4 more)
libfibercpu/src/: bindings.cpp  bindings.h  common.h  decoder.cpp  decoder.h  decoder_lut.h  dfe_lut.h  dispatch.h  exec_utils.h  float80.c  float80.h  handler_reflection_exports.cpp  hooks.h  logger.cpp  logger.h  ops.cpp  ops.h  ops_helpers_template.h  specialization.h  state.h  superopcodes.cpp  superopcodes.h
libfibercpu/src/mem/: mmu.h  mmu_impl.h  tlb.h  types.h
libfibercpu/src/ops/: ops_alu.h  ops_alu_impl.h  ops_compare.cpp  ops_compare_impl.h  ops_control.h  ops_data_mov.cpp  ops_data_mov.h  ops_data_mov_impl.h  ops_double_shift.cpp  ops_fpu.cpp  ops_fpu.h  ops_fpu_impl.h  ops_groups.cpp  ops_groups_impl.h  ops_mmx.h  ops_mmx_impl.h  ops_muldiv_impl.h  ops_shift_bit.h  ops_shift_bit_impl.h  ops_sse_cvt.h  ops_sse_cvt_impl.h  ops_sse_fp_impl.h  ops_sse_int_impl.h  ops_sse_mov.cpp  ops_sse_mov.h  ops_sse_mov_impl.h
src/: hooks.h  (+16 more)
(+749 files in other folders)
